--- a/apis/news.html
+++ b/apis/news.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
+		<style type="text/css">
+			.gsc-control{width:100% !important}
+		</style>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <title>Earthquake News Search</title>
     <script src="http://www.google.com/jsapi?key=AIzaSyA5m1Nc8ws2BbmPRwKu5gFradvD_hgq6G0" type="text/javascript"></script>
@@ -19,7 +22,10 @@
 
       //Add News Search to searchControl
       searchControl.addSearcher(new google.search.NewsSearch(), options);
-    
+
+			//show 8 results at a time
+			searchControl.setResultSetSize('large'); 
+ 
       //Tell searchControl to draw the results in the div called "content"
       searchControl.draw(document.getElementById("content"));
     
